# rhythm-napi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  mise.toml
.github/: dependabot.yml
.github/workflows/: bindings.yml  ci.yml  release.yml
crates/music_stream/: Cargo.toml
crates/music_stream/benches/: allocation_profile.rs  criterion_media.rs  criterion_pipeline.rs
crates/music_stream/benches/support/: mod.rs
crates/music_stream/src/: control.rs  engine.rs  error.rs  event.rs  lib.rs  lifecycle.rs  model.rs  quality.rs  runtime.rs  slot.rs
crates/music_stream/src/audio/: frame.rs  mod.rs  pipeline.rs
crates/music_stream/src/audio/decode/: mod.rs
crates/music_stream/src/audio/dsp/: mod.rs
crates/music_stream/src/audio/opus/: mod.rs
crates/music_stream/src/audio/resample/: mod.rs
crates/music_stream/src/runtime/: external_pull.rs  opus_queue.rs  producer.rs  sender.rs
crates/music_stream/src/session/: mailbox.rs  mod.rs
crates/music_stream/src/source/: hls.rs  live.rs  mod.rs  mp4.rs  spool.rs
crates/music_stream/src/transport/: mod.rs
crates/music_stream/testdata/: README.md  faststart-aac.m4a.b64  sine-mono-alac.m4a.b64  sine-mono-vorbis.ogg.b64  sine-mono.flac.b64  sine-mono.mp3.b64
crates/music_stream/tests/: playout_flow.rs
crates/music_stream_napi/: .npmrc  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  vitest.config.mts
crates/music_stream_napi/npm/darwin-arm64/: README.md  package.json
crates/music_stream_napi/npm/darwin-x64/: README.md  package.json
crates/music_stream_napi/npm/linux-x64-gnu/: README.md  package.json
crates/music_stream_napi/npm/win32-x64-msvc/: README.md  package.json
crates/music_stream_napi/scripts/: soak.mjs
crates/music_stream_napi/src/: convert.rs  events.rs  lib.rs  types.rs
crates/music_stream_napi/test/: api-contract.ts  external-pull.test.ts  helpers.ts  live-stream.test.ts  loudness.test.ts  playback-controls.test.ts  rtp-feedback.test.ts  rtp-sticky.test.ts  runtime.test.ts  source-policy.test.ts
docs/: architecture.md  async-lifecycle-handoff.md  dependencies.md  design-review.md  handoff.md  implementation.md  index.md  latency.md  playback-model.md  refactoring-roadmap.md  releasing.md  runtime.md  source-todo.md  status.md  testing.md  user-doc.md
