[package]
name = "music_stream"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bytes.workspace = true
lru.workspace = true
m3u8-rs.workspace = true
metrics.workspace = true
opus.workspace = true
rand.workspace = true
reqwest.workspace = true
rtcp.workspace = true
rtp.workspace = true
rubato.workspace = true
symphonia.workspace = true
tempfile.workspace = true
thiserror.workspace = true
util.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
base64 = "0.22.1"
criterion.workspace = true
ogg = "0.9.2"

[[bench]]
name = "criterion_pipeline"
harness = false
