[package]
name = "music_stream_napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lru.workspace = true
music_stream.workspace = true
napi.workspace = true
napi-derive.workspace = true
tokio.workspace = true

[build-dependencies]
napi-build = "2.2.3"

[dev-dependencies]
# Rust unit tests run without a Node host, so N-API symbols must use napi-rs' no-op shim.
napi = { workspace = true, features = ["noop"] }
