[package]
name = "rhythm_streamer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lru.workspace = true
metrics.workspace = true
music_stream.workspace = true
napi.workspace = true
napi-derive.workspace = true
tokio.workspace = true

[build-dependencies]
napi-build = "2.2.3"

[dev-dependencies]
# Rust unit tests run without a Node host. Dynamic symbols keep the test binary linkable while the
# no-op mode prevents registration from requiring a live Node environment.
napi = { workspace = true, features = ["dyn-symbols", "noop"] }
